import { FormStatus } from '@defra/forms-model'
import { buildDefinition } from '@defra/forms-model/stubs'

import {
  buildFormAdapterSubmissionMessage,
  buildFormAdapterSubmissionMessageMetaStub
} from '~/src/service/__stubs__/event-builders.js'
import {
  legacyGraphFormDefinition,
  legacyGraphFormMessage
} from '~/src/service/mappers/formatters/__stubs__/legacy-form.js'
import {
  exampleNotifyFormDefinition,
  exampleNotifyFormMessage,
  pizzaFormDefinition,
  pizzaMessage
} from '~/src/service/mappers/formatters/__stubs__/notify.js'
import { getFormatter } from '~/src/service/mappers/formatters/index.js'

jest.mock('nunjucks', () => {
  const environment = {
    addFilter: jest.fn(),
    addGlobal: jest.fn()
  }
  return {
    configure: jest.fn(() => environment)
  }
})
jest.mock('~/src/config/index.js', () => ({
  config: {
    get: jest.fn((key) => {
      if (key === 'designerUrl') return 'http://designer'
      if (key === 'fileExpiryInMonths') return 9
      return 'mock value'
    })
  }
}))

describe('Human formatter', () => {
  beforeAll(() => {
    jest.useFakeTimers().setSystemTime(new Date('2025-07-01T23:00:00Z')) // UTC should map to BST
  })
  afterAll(() => {
    jest.useRealTimers()
  })

  describe('format', () => {
    it('should return a valid human readable v1 response', () => {
      const definition = buildDefinition({
        ...exampleNotifyFormDefinition,
        output: {
          audience: 'human',
          version: '1'
        }
      })
      const formatter = getFormatter('human', '1')
      const output = formatter(exampleNotifyFormMessage, definition, '1')

      expect(output).toContain(
        '^ For security reasons, the links in this email expire at'
      )
      expect(output).toContain('Example notify form form received at')
      expect(output).toContain('# What is your name?')
      expect(output).toContain('Someone')
      expect(output).toContain('# Additional details')
      expect(output).toContain('# What is your address?')
      expect(output).toContain('1 Anywhere Street')
      expect(output).toContain('Anywhereville')
      expect(output).toContain('Anywhereshire')
      expect(output).toContain('AN1 2WH')
      expect(output).toContain('# What is your date of birth?')
      expect(output).toContain('1 January 2000')
      expect(output).toContain('# What month is it?')
      expect(output).toContain('August 2025')
      expect(output).toContain('# Who are your favourite LotR characters?')
      expect(output).toContain('* Gandalf')
      expect(output).toContain('* Frodo')
      expect(output).toContain('# Team Member')
      expect(output).toContain(
        '[Download&nbsp;Team&nbsp;Member&nbsp;(CSV)](http://designer/file-download/e3005cd2-8b1c-4dc4-b2ac-bd1ff73666a9)'
      )
      expect(output).toContain('# Please add supporting evidence')
      expect(output).toContain('Uploaded 1 file')
      expect(output).toContain(
        '* [supporting_evidence.pdf](http://designer/file-download/ef4863e9-7e9e-40d0-8fea-cf34faf098cd)'
      )

      expect(output).toContain(
        '[Download&nbsp;main&nbsp;form&nbsp;(CSV)](http://designer/file-download/818d567d-ee05-4a7a-8c49-d5c54fb09b16)'
      )
      expect(output).toMatchSnapshot()
    })

    it('should return a valid human readable v1 response in preview mode', () => {
      const definition = buildDefinition({
        ...exampleNotifyFormDefinition,
        output: {
          audience: 'human',
          version: '1'
        }
      })
      const formatter = getFormatter('human', '1')
      const output = formatter(
        buildFormAdapterSubmissionMessage({
          ...exampleNotifyFormMessage,
          meta: buildFormAdapterSubmissionMessageMetaStub({
            ...exampleNotifyFormMessage.meta,
            isPreview: true
          })
        }),
        definition,
        '1'
      )

      expect(output).toMatchSnapshot()
    })

    it('should return a valid human readable v1 response with reference number', () => {
      const definition = buildDefinition({
        ...exampleNotifyFormDefinition,
        output: {
          audience: 'human',
          version: '1'
        },
        options: {
          showReferenceNumber: true
        }
      })
      const formatter = getFormatter('human', '1')
      const output = formatter(
        buildFormAdapterSubmissionMessage({
          ...exampleNotifyFormMessage,
          meta: buildFormAdapterSubmissionMessageMetaStub({
            ...exampleNotifyFormMessage.meta,
            isPreview: true
          })
        }),
        definition,
        '1'
      )

      expect(output).toContain('Reference number: 874-C7C-D60')
      expect(output).toMatchSnapshot()
    })

    it('should return a valid human readable v1 response in Draft mode', () => {
      const definition = buildDefinition({
        ...exampleNotifyFormDefinition,
        output: {
          audience: 'human',
          version: '1'
        }
      })
      const formatter = getFormatter('human', '1')
      const output = formatter(
        buildFormAdapterSubmissionMessage({
          ...exampleNotifyFormMessage,
          meta: buildFormAdapterSubmissionMessageMetaStub({
            ...exampleNotifyFormMessage.meta,
            status: FormStatus.Draft
          })
        }),
        definition,
        '1'
      )

      expect(output).toMatchSnapshot()
    })

    it('should return a valid human readable v1 response 2', () => {
      const definition = buildDefinition({
        ...pizzaFormDefinition,
        output: {
          audience: 'human',
          version: '1'
        }
      })
      const formatter = getFormatter('human', '1')
      const output = formatter(pizzaMessage, definition, '1')
      expect(output).toMatchSnapshot()
    })

    it('should return a valid human readable v1 response for legacy graph-based forms', () => {
      const definition = buildDefinition({
        ...legacyGraphFormDefinition,
        output: {
          audience: 'human',
          version: '1'
        }
      })
      const formatter = getFormatter('human', '1')
      const output = formatter(legacyGraphFormMessage, definition, '1')

      expect(output).toMatchSnapshot()
    })
  })

  describe('payment details', () => {
    it('should include payment details section when payment exists', () => {
      const definition = buildDefinition({
        ...exampleNotifyFormDefinition,
        output: {
          audience: 'human',
          version: '1'
        }
      })

      const messageWithPayment = buildFormAdapterSubmissionMessage({
        ...exampleNotifyFormMessage,
        data: {
          ...exampleNotifyFormMessage.data,
          payment: {
            paymentId: 'pay_abc123',
            reference: 'REF-123-456',
            amount: 150,
            description: 'Application fee',
            createdAt: '2025-11-10T17:01:29.000Z'
          }
        }
      })

      const formatter = getFormatter('human', '1')
      const output = formatter(messageWithPayment, definition, '1')

      expect(output).toContain('# Payment details')
      expect(output).toContain('## Payment for')
      expect(output).toContain('Application fee')
      expect(output).toContain('## Total amount')
      expect(output).toContain('£150')
      expect(output).toContain('## Date of payment')
      expect(output).toContain('5:01pm on 10 November 2025')
    })

    it('should not include payment details section when no payment exists', () => {
      const definition = buildDefinition({
        ...exampleNotifyFormDefinition,
        output: {
          audience: 'human',
          version: '1'
        }
      })

      const messageWithNoPayment = buildFormAdapterSubmissionMessage({
        ...exampleNotifyFormMessage,
        data: {
          ...exampleNotifyFormMessage.data,
          payment: undefined
        }
      })

      const formatter = getFormatter('human', '1')
      const output = formatter(messageWithNoPayment, definition, '1')

      expect(output).not.toContain('# Payment details')
      expect(output).not.toContain('## Payment for')
      expect(output).not.toContain('## Total amount')
      expect(output).not.toContain('## Date of payment')
    })

    it('should not include payment details section when payment is undefined', () => {
      const definition = buildDefinition({
        ...exampleNotifyFormDefinition,
        output: {
          audience: 'human',
          version: '1'
        }
      })

      const messageWithNoPayment = buildFormAdapterSubmissionMessage({
        ...exampleNotifyFormMessage,
        data: {
          ...exampleNotifyFormMessage.data,
          payment: undefined
        }
      })

      const formatter = getFormatter('human', '1')
      const output = formatter(messageWithNoPayment, definition, '1')

      expect(output).not.toContain('# Payment details')
    })
  })
})
