// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Human formatter format should return a valid human readable v1 response 1`] = `
"^ For security reasons, the links in this email expire at 12:00am on Thursday 2 April 2026

Example notify form form received at 12:00am on 2 July 2025.

---

# What is your name?

Someone

# Additional details



# What is your address?

1 Anywhere Street
Anywhereville
Anywhereshire
AN1 2WH

# What is your date of birth?

1 January 2000

# What month is it?

August 2025

# What is the team member\\'s name?

## Team Member 1

Frodo

## Team Member 2

Gandalf

# What is the team member\\'s date of birth?

## Team Member 1

1 January 2000

## Team Member 2

1 January 2020

# Who are your favourite LotR characters?

* Gandalf
* Frodo

# Please add supporting evidence

Uploaded 1 file:

* [supporting_evidence.pdf](http://designer/file-download/ef4863e9-7e9e-40d0-8fea-cf34faf098cd)

## Team Member

[Download&nbsp;Team&nbsp;Member&nbsp;(CSV)](http://designer/file-download/e3005cd2-8b1c-4dc4-b2ac-bd1ff73666a9)

---

[Download&nbsp;main&nbsp;form&nbsp;(CSV)](http://designer/file-download/818d567d-ee05-4a7a-8c49-d5c54fb09b16)



Thanks,
Defra"
`;

exports[`Human formatter format should return a valid human readable v1 response 2 1`] = `
"^ For security reasons, the links in this email expire at 12:00am on Thursday 2 April 2026

Pizza Form form received at 12:00am on 2 July 2025.

---

# Toppings

## Pizza 1

Ham

## Pizza 2

Pepperoni

# Quantity

## Pizza 1

2

## Pizza 2

1

# How would you like to receive your pizza?

Delivery

# Multiline Text field

Line 1
Line 2
Line 3

# Multiline Text field 2

Line 1
\` \` \`
Line 2
\` \` \`
Line 3

## Pizza

[Download&nbsp;Pizza&nbsp;(CSV)](http://designer/file-download/11111111-1111-1111-1111-111111111111)

---

[Download&nbsp;main&nbsp;form&nbsp;(CSV)](http://designer/file-download/00000000-0000-0000-0000-000000000000)



Thanks,
Defra"
`;

exports[`Human formatter format should return a valid human readable v1 response for legacy graph-based forms 1`] = `
"^ For security reasons, the links in this email expire at 12:00am on Thursday 2 April 2026

Pizza Form form received at 12:00am on 2 July 2025.

---

# Your age

4

# Country of birth

England (GB-ENG)

# First name

John

# Last name

Doe

# First name

## person 1

Jane

## person 2

Janet

# Last name

## person 1

Doe

## person 2

Doe

# When did they leave the UK?

## person 1

January 2000

## person 2

January 2000

# Passport number

23423

# Number of people in your household

543

# Upload proof of address

Uploaded 1 file:

* [bank_statement.pdf](http://designer/file-download/2c39f4bf-2ccc-4b73-8e0e-c91549b56989)

## person

[Download&nbsp;person&nbsp;(CSV)](http://designer/file-download/11111111-1111-1111-1111-111111111111)

---

[Download&nbsp;main&nbsp;form&nbsp;(CSV)](http://designer/file-download/00000000-0000-0000-0000-000000000000)



Thanks,
Defra"
`;

exports[`Human formatter format should return a valid human readable v1 response in Draft mode 1`] = `
"^ For security reasons, the links in this email expire at 12:00am on Thursday 2 April 2026

Example notify form form received at 12:00am on 2 July 2025.

---

# What is your name?

Someone

# Additional details



# What is your address?

1 Anywhere Street
Anywhereville
Anywhereshire
AN1 2WH

# What is your date of birth?

1 January 2000

# What month is it?

August 2025

# What is the team member\\'s name?

## Team Member 1

Frodo

## Team Member 2

Gandalf

# What is the team member\\'s date of birth?

## Team Member 1

1 January 2000

## Team Member 2

1 January 2020

# Who are your favourite LotR characters?

* Gandalf
* Frodo

# Please add supporting evidence

Uploaded 1 file:

* [supporting_evidence.pdf](http://designer/file-download/ef4863e9-7e9e-40d0-8fea-cf34faf098cd)

## Team Member

[Download&nbsp;Team&nbsp;Member&nbsp;(CSV)](http://designer/file-download/e3005cd2-8b1c-4dc4-b2ac-bd1ff73666a9)

---

[Download&nbsp;main&nbsp;form&nbsp;(CSV)](http://designer/file-download/818d567d-ee05-4a7a-8c49-d5c54fb09b16)



Thanks,
Defra"
`;

exports[`Human formatter format should return a valid human readable v1 response in preview mode 1`] = `
"^ For security reasons, the links in this email expire at 12:00am on Thursday 2 April 2026

This is a test of the Example notify form live form.

Example notify form form received at 12:00am on 2 July 2025.

---

# What is your name?

Someone

# Additional details



# What is your address?

1 Anywhere Street
Anywhereville
Anywhereshire
AN1 2WH

# What is your date of birth?

1 January 2000

# What month is it?

August 2025

# What is the team member\\'s name?

## Team Member 1

Frodo

## Team Member 2

Gandalf

# What is the team member\\'s date of birth?

## Team Member 1

1 January 2000

## Team Member 2

1 January 2020

# Who are your favourite LotR characters?

* Gandalf
* Frodo

# Please add supporting evidence

Uploaded 1 file:

* [supporting_evidence.pdf](http://designer/file-download/ef4863e9-7e9e-40d0-8fea-cf34faf098cd)

## Team Member

[Download&nbsp;Team&nbsp;Member&nbsp;(CSV)](http://designer/file-download/e3005cd2-8b1c-4dc4-b2ac-bd1ff73666a9)

---

[Download&nbsp;main&nbsp;form&nbsp;(CSV)](http://designer/file-download/818d567d-ee05-4a7a-8c49-d5c54fb09b16)



Thanks,
Defra"
`;

exports[`Human formatter format should return a valid human readable v1 response with reference number 1`] = `
"^ For security reasons, the links in this email expire at 12:00am on Thursday 2 April 2026

This is a test of the Example notify form live form.

Example notify form form received at 12:00am on 2 July 2025.

---

^ Reference number: 874-C7C-D60

# What is your name?

Someone

# Additional details



# What is your address?

1 Anywhere Street
Anywhereville
Anywhereshire
AN1 2WH

# What is your date of birth?

1 January 2000

# What month is it?

August 2025

# What is the team member\\'s name?

## Team Member 1

Frodo

## Team Member 2

Gandalf

# What is the team member\\'s date of birth?

## Team Member 1

1 January 2000

## Team Member 2

1 January 2020

# Who are your favourite LotR characters?

* Gandalf
* Frodo

# Please add supporting evidence

Uploaded 1 file:

* [supporting_evidence.pdf](http://designer/file-download/ef4863e9-7e9e-40d0-8fea-cf34faf098cd)

## Team Member

[Download&nbsp;Team&nbsp;Member&nbsp;(CSV)](http://designer/file-download/e3005cd2-8b1c-4dc4-b2ac-bd1ff73666a9)

---

[Download&nbsp;main&nbsp;form&nbsp;(CSV)](http://designer/file-download/818d567d-ee05-4a7a-8c49-d5c54fb09b16)



Thanks,
Defra"
`;
